Fix cover image horizontal scrollbar issue.

--- a/source/stylesheets/blog.css.scss
+++ b/source/stylesheets/blog.css.scss
@@ -116,7 +116,7 @@ header {
   margin-top: -15px;
   margin-bottom: 15px;
   max-height: 300px;
-  overflow-y: hidden;
+  overflow: hidden;
 
   img {
     width: 100%;
